Tue Jul  8 16:44:24 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove autoheader template for ACE_HAS_BROKEN_HPUX_TEMPLATES.

	* netsvcs/lib/Server_Logging_Handler_T.cpp:
        * netsvcs/lib/Server_Logging_Handler_T.h:

          Remove use of ACE_HAS_BROKEN_HPUX_TEMPLATES feature test macro.

        * ace/README:

          Remove ACE_HAS_BROKEN_HPUX_TEMPLATES from the list of feature
          test macros.  It was removed since ACE no longer supports any
          systems that required it.

Tue Jul  8 16:41:26  2008  Steve Huston  <shuston@riverace.com>

        * ace/WIN32_Asynch_IO.cpp (ACE_WIN32_Asynch_Write_Stream::write): For
          Winsock 2-capable platforms, use WSASend() instead of WriteFile().
          The former performs an order of magnitude faster. Thanks to
          Namrata Gandhi for running the Win32 native performance tests.

Tue Jul  8 16:35:57 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:
        * configure.ac:

          Remove feature test and autoheader template for
          ACE_NEEDS_REGEXPR_H.  It is no longer used by ACE.

        * ace/config-unixware-7.1.0.h:
        * ace/config-unixware-7.1.0.udk.h:

          Remove the ACE_NEEDS_REGEXPR_H feature test macro definition.
          It is no longer used by ACE.

Tue Jul  8 16:06:46 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * NEWS:

          Document new --enable-rcsid option for autoconf build.

        * m4/ace.m4:
        * m4/config_h.m4:
        * m4/platform.m4:

          Add support of a new --enable-rcsid option for the autoconf
          build.  Previously, compiling RCS IDs into object files was
          tightly coupled with the --enable-debug option and was always
          disabled for certain operating systems. A separate option allows
          the user to select this behavior independently.

Tue Jul  8 14:41:08  2008  Steve Huston  <shuston@riverace.com>
