@@ -2248,6 +2248,8 @@ Thomas Brownridge <thomas dot brownridge at lmco dot com>
 June Fang <june dot fang at gmail dot com>
 Bill Kendall <wkendall at sgi dot com>
 Ittehad Shaikh <ishaikh at verivue dot com>
+Michael Doubez <michael dot doubez at gmail dot com>
+Namrata Gandhi <...>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
